# flask-config

./: .flake8  .pre-commit-config.yaml  LICENSE  pyproject.toml
src/flask_configurer/: app_factory.py  dependencies.py  entities.py  exc.py
tests/: conftest.py  test_app_factory.py  test_dependencies.py
